// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";
package io.harness.eventsframework.schemas.entity;

option java_multiple_files = true;
option go_package = "970_ng_commons";
import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/scope.proto";
import "google/protobuf/wrappers.proto";

message IdentifierRefProtoDTO {
  io.harness.eventsframework.schemas.entity.ScopeProtoEnum scope = 1;
  google.protobuf.StringValue identifier = 2;
  google.protobuf.StringValue accountIdentifier = 3;
  google.protobuf.StringValue orgIdentifier = 4;
  google.protobuf.StringValue projectIdentifier = 5;
  map<string, string> metadata = 6;
}
